deploy: d9794d7f10d76b74e4ac12b7e50dc5fb13e42ef6

--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
 <section class="desc markdown">
   <h1 id="sector">Sector</h1>
 <p>A 🔥 <em>fast</em> (benchmarked) and 👍🏼 <em>intuitive</em> (idiomatic) 2D Grid API.</p>
+<p><a href="https://github.com/matanlurey/sector/actions/workflows/ci.yaml"><img src="https://github.com/matanlurey/sector/actions/workflows/ci.yaml/badge.svg" alt="CI"></a>
+<a href="https://coveralls.io/github/matanlurey/sector?branch=main"><img src="https://coveralls.io/repos/github/matanlurey/sector/badge.svg?branch=main" alt="Coverage Status"></a>
+<a href="https://pub.dev/packages/sector"><img src="https://img.shields.io/pub/v/sector.svg" alt="Pub Package"></a>
+<a href="https://pub.dev/documentation/sector/latest/"><img src="https://img.shields.io/badge/dartdoc-reference-blue.svg" alt="Dartdoc reference"></a></p>
 <h2 id="getting-started">Getting Started</h2>
 <p>Add a dependency in your <code>pubspec.yaml</code> or run the following command:</p>
 <pre class="language-bash"><code class="language-bash">dart pub add sector
