deploy: 727dd8de370966a578862600009e9740f73dca65

--- a/sector/ColumnsBase/insertFirst.html
+++ b/sector/ColumnsBase/insertFirst.html
@@ -89,8 +89,8 @@ to resize a grid if you constructed the grid yourself and know this
 instance supports resizing.</p>
 <p>For example, the <a href="../../sector/ListGrid-class.html">ListGrid</a> class supports growable grids, but the default
 grid implementation returned by <a href="../../sector/Grid/asSubGrid.html">Grid.asSubGrid</a> only supports resizing if
-the view is "complete"; and <a href="../../sector/TypedDataGrid-class.html">TypedDataGrid</a> does not support resizing at
-all.</p>
+the view is "complete"; and <a href="../../sector/ListGrid/ListGrid.view.html">ListGrid.view</a> only supports resizing if the
+backing list is growable.</p>
 </div>
 </section>
 
