--- a/sector/ListGrid-class-sidebar.html
+++ b/sector/ListGrid-class-sidebar.html
@@ -8,6 +8,7 @@
           <li><a href="sector/ListGrid/ListGrid.fromColumns.html">fromColumns</a></li>
           <li><a href="sector/ListGrid/ListGrid.fromRows.html">fromRows</a></li>
           <li><a href="sector/ListGrid/ListGrid.generate.html">generate</a></li>
+          <li><a href="sector/ListGrid/ListGrid.view.html">view</a></li>
 
 
     
@@ -25,11 +26,16 @@
         <li class="section-title"><a href="sector/ListGrid-class.html#instance-methods">Methods</a></li>
           <li class="inherited"><a href="sector/Grid/asSubGrid.html">asSubGrid</a></li>
           <li><a href="sector/ListGrid/clear.html">clear</a></li>
-          <li class="inherited"><a href="sector/Grid/contains.html">contains</a></li>
+          <li><a href="sector/ListGrid/contains.html">contains</a></li>
+          <li class="inherited"><a href="sector/Grid/containsXY.html">containsXY</a></li>
           <li class="inherited"><a href="sector/Grid/containsXYWH.html">containsXYWH</a></li>
           <li class="inherited"><a href="sector/Grid/get.html">get</a></li>
           <li><a href="sector/ListGrid/getUnchecked.html">getUnchecked</a></li>
+          <li><a href="sector/ListGrid/lastOffsetOf.html">lastOffsetOf</a></li>
+          <li><a href="sector/ListGrid/lastOffsetWhere.html">lastOffsetWhere</a></li>
           <li class="inherited"><a href="https://api.dart.dev/stable/3.4.4/dart-core/Object/noSuchMethod.html">noSuchMethod</a></li>
+          <li><a href="sector/ListGrid/offsetOf.html">offsetOf</a></li>
+          <li><a href="sector/ListGrid/offsetWhere.html">offsetWhere</a></li>
           <li class="inherited"><a href="sector/Grid/set.html">set</a></li>
           <li><a href="sector/ListGrid/setUnchecked.html">setUnchecked</a></li>
           <li class="inherited"><a href="sector/Grid/subGrid.html">subGrid</a></li>
