--- a/sector/ListGrid-class.html
+++ b/sector/ListGrid-class.html
@@ -150,6 +150,13 @@ the most efficient for most use-cases.</p>
           Creates a new grid with the provided <code>width</code> and <code>height</code>.
             <div class="constructor-modifier features">factory</div>
         </dd>
+        <dt id="ListGrid.view" class="callable">
+          <span class="name"><a href="../sector/ListGrid/ListGrid.view.html">ListGrid.view</a></span><span class="signature">(<span class="parameter" id="view-param-cells"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/List-class.html">List</a><span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span></span> <span class="parameter-name">cells</span>, </span><span class="parameter" id="view-param-width">{<span>required</span> <span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span> <span class="parameter-name">width</span>}</span>)</span>
+        </dt>
+        <dd>
+          Creates a grid that is a <em>view</em> of <code>cells</code> in row-major order.
+            <div class="constructor-modifier features">factory</div>
+        </dd>
     </dl>
   </section>
     
@@ -276,8 +283,21 @@ the most efficient for most use-cases.</p>
 
 </dd>
 
-        <dt id="contains" class="callable inherited">
-  <span class="name"><a href="../sector/Grid/contains.html">contains</a></span><span class="signature">(<wbr><span class="parameter" id="contains-param-x"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span> <span class="parameter-name">x</span>, </span><span class="parameter" id="contains-param-y"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span> <span class="parameter-name">y</span></span>)
+        <dt id="contains" class="callable">
+  <span class="name"><a href="../sector/ListGrid/contains.html">contains</a></span><span class="signature">(<wbr><span class="parameter" id="contains-param-element"><span class="type-annotation">T</span> <span class="parameter-name">element</span></span>)
+    <span class="returntype parameter">&#8594; <a href="https://api.dart.dev/stable/3.4.4/dart-core/bool-class.html">bool</a></span>
+  </span>
+  
+
+</dt>
+<dd>
+  Returns <code>true</code> if the grid contains the provided <code>element</code>.
+  <div class="features"><span class="feature">override</span></div>
+
+</dd>
+
+        <dt id="containsXY" class="callable inherited">
+  <span class="name"><a href="../sector/Grid/containsXY.html">containsXY</a></span><span class="signature">(<wbr><span class="parameter" id="containsXY-param-x"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span> <span class="parameter-name">x</span>, </span><span class="parameter" id="containsXY-param-y"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span> <span class="parameter-name">y</span></span>)
     <span class="returntype parameter">&#8594; <a href="https://api.dart.dev/stable/3.4.4/dart-core/bool-class.html">bool</a></span>
   </span>
   
@@ -328,6 +348,32 @@ the most efficient for most use-cases.</p>
 
 </dd>
 
+        <dt id="lastOffsetOf" class="callable">
+  <span class="name"><a href="../sector/ListGrid/lastOffsetOf.html">lastOffsetOf</a></span><span class="signature">(<wbr><span class="parameter" id="lastOffsetOf-param-element"><span class="type-annotation">T</span> <span class="parameter-name">element</span>, </span><span class="parameter" id="lastOffsetOf-param-end">[<span class="type-annotation">(<span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span>, </span><span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span></span>)?</span> <span class="parameter-name">end</span>]</span>)
+    <span class="returntype parameter">&#8594; (<span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span>, </span><span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span></span>)?</span>
+  </span>
+  
+
+</dt>
+<dd>
+  Returns the last <code>(x, y)</code> offset of the provided <code>element</code> in the grid.
+  <div class="features"><span class="feature">override</span></div>
+
+</dd>
+
+        <dt id="lastOffsetWhere" class="callable">
+  <span class="name"><a href="../sector/ListGrid/lastOffsetWhere.html">lastOffsetWhere</a></span><span class="signature">(<wbr><span class="parameter" id="lastOffsetWhere-param-test"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/bool-class.html">bool</a></span> <span class="parameter-name">test</span>(<span class="parameter" id="param-"><span class="type-annotation">T</span></span>), </span><span class="parameter" id="lastOffsetWhere-param-end">[<span class="type-annotation">(<span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span>, </span><span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span></span>)?</span> <span class="parameter-name">end</span>]</span>)
+    <span class="returntype parameter">&#8594; (<span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span>, </span><span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span></span>)?</span>
+  </span>
+  
+
+</dt>
+<dd>
+  Returns the last <code>(x, y)</code> offset where <code>test</code> returns <code>true</code>.
+  <div class="features"><span class="feature">override</span></div>
+
+</dd>
+
         <dt id="noSuchMethod" class="callable inherited">
   <span class="name"><a href="https://api.dart.dev/stable/3.4.4/dart-core/Object/noSuchMethod.html">noSuchMethod</a></span><span class="signature">(<wbr><span class="parameter" id="noSuchMethod-param-invocation"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/Invocation-class.html">Invocation</a></span> <span class="parameter-name">invocation</span></span>)
     <span class="returntype parameter">&#8594; dynamic</span>
@@ -338,6 +384,32 @@ the most efficient for most use-cases.</p>
 <dd class="inherited">
   Invoked when a nonexistent method or property is accessed.
   <div class="features"><span class="feature">inherited</span></div>
+
+</dd>
+
+        <dt id="offsetOf" class="callable">
+  <span class="name"><a href="../sector/ListGrid/offsetOf.html">offsetOf</a></span><span class="signature">(<wbr><span class="parameter" id="offsetOf-param-element"><span class="type-annotation">T</span> <span class="parameter-name">element</span>, </span><span class="parameter" id="offsetOf-param-start">[<span class="type-annotation">(<span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span>, </span><span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span></span>)</span> <span class="parameter-name">start</span> = <span class="default-value">(0, 0)</span>]</span>)
+    <span class="returntype parameter">&#8594; (<span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span>, </span><span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span></span>)?</span>
+  </span>
+  
+
+</dt>
+<dd>
+  Returns the first <code>(x, y)</code> offset of the provided <code>element</code> in the grid.
+  <div class="features"><span class="feature">override</span></div>
+
+</dd>
+
+        <dt id="offsetWhere" class="callable">
+  <span class="name"><a href="../sector/ListGrid/offsetWhere.html">offsetWhere</a></span><span class="signature">(<wbr><span class="parameter" id="offsetWhere-param-test"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/bool-class.html">bool</a></span> <span class="parameter-name">test</span>(<span class="parameter" id="param-"><span class="type-annotation">T</span></span>), </span><span class="parameter" id="offsetWhere-param-start">[<span class="type-annotation">(<span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span>, </span><span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span></span>)</span> <span class="parameter-name">start</span> = <span class="default-value">(0, 0)</span>]</span>)
+    <span class="returntype parameter">&#8594; (<span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span>, </span><span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span></span>)?</span>
+  </span>
+  
+
+</dt>
+<dd>
+  Returns the first <code>(x, y)</code> offset where <code>test</code> returns <code>true</code>.
+  <div class="features"><span class="feature">override</span></div>
 
 </dd>
 
