--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ final grid = Grid.fromRows([
 </code></pre>
 <p>Check the bounds, <code>get</code>, and <code>set</code> elements:</p>
 <pre class="language-dart"><code class="language-dart">// Check if a point is within the bounds of the grid.
-if (grid.contains(0, 0)) {
+if (grid.containsXY(0, 0)) {
   // ...
 }
 
