--- a/sector/Grid-class-sidebar.html
+++ b/sector/Grid-class-sidebar.html
@@ -26,10 +26,15 @@
           <li><a href="sector/Grid/asSubGrid.html">asSubGrid</a></li>
           <li><a href="sector/Grid/clear.html">clear</a></li>
           <li><a href="sector/Grid/contains.html">contains</a></li>
+          <li><a href="sector/Grid/containsXY.html">containsXY</a></li>
           <li><a href="sector/Grid/containsXYWH.html">containsXYWH</a></li>
           <li><a href="sector/Grid/get.html">get</a></li>
           <li><a href="sector/Grid/getUnchecked.html">getUnchecked</a></li>
+          <li><a href="sector/Grid/lastOffsetOf.html">lastOffsetOf</a></li>
+          <li><a href="sector/Grid/lastOffsetWhere.html">lastOffsetWhere</a></li>
           <li class="inherited"><a href="https://api.dart.dev/stable/3.4.4/dart-core/Object/noSuchMethod.html">noSuchMethod</a></li>
+          <li><a href="sector/Grid/offsetOf.html">offsetOf</a></li>
+          <li><a href="sector/Grid/offsetWhere.html">offsetWhere</a></li>
           <li><a href="sector/Grid/set.html">set</a></li>
           <li><a href="sector/Grid/setUnchecked.html">setUnchecked</a></li>
           <li><a href="sector/Grid/subGrid.html">subGrid</a></li>
